// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserDetail /> should render 1`] = `
<div>
  <Detail__UserDetailHeader>
    <Identicon
      hash="foo"
      size={56}
    />
    <Detail__UserDetailTitle>
      <span>
        bob
      </span>
      <Icon
        bsStyle="primary"
        faStyle="fas"
        fixedWidth={false}
        name="user-shield"
        pullRight={false}
      />
      <Link
        to="/administration/users"
      >
        Back To List
      </Link>
    </Detail__UserDetailTitle>
  </Detail__UserDetailHeader>
  <Connect(Password) />
  <Detail__UserDetailGroups>
    <div>
      <Connect(UserGroups) />
      <Connect(PrimaryGroup) />
    </div>
    <Connect(UserPermissions) />
  </Detail__UserDetailGroups>
  <Connect(UserRole) />
  <RemoveBanner
    buttonText="Delete"
    message="Click the Delete button to permanently remove this user."
    onClick={[Function]}
  />
</div>
`;

exports[`<UserDetail /> should render when [administrator=false] 1`] = `
<div>
  <Detail__UserDetailHeader>
    <Identicon
      hash="foo"
      size={56}
    />
    <Detail__UserDetailTitle>
      <span>
        bob
      </span>
      <Link
        to="/administration/users"
      >
        Back To List
      </Link>
    </Detail__UserDetailTitle>
  </Detail__UserDetailHeader>
  <Connect(Password) />
  <Detail__UserDetailGroups>
    <div>
      <Connect(UserGroups) />
      <Connect(PrimaryGroup) />
    </div>
    <Connect(UserPermissions) />
  </Detail__UserDetailGroups>
  <Connect(UserRole) />
  <RemoveBanner
    buttonText="Delete"
    message="Click the Delete button to permanently remove this user."
    onClick={[Function]}
  />
</div>
`;

exports[`<UserDetail /> should render when [canModifyUser=false] 1`] = `
<div>
  <Detail__UserDetailHeader>
    <Identicon
      hash="foo"
      size={56}
    />
    <Detail__UserDetailTitle>
      <span>
        bob
      </span>
      <Icon
        bsStyle="primary"
        faStyle="fas"
        fixedWidth={false}
        name="user-shield"
        pullRight={false}
      />
      <Link
        to="/administration/users"
      >
        Back To List
      </Link>
    </Detail__UserDetailTitle>
  </Detail__UserDetailHeader>
  <Connect(Password) />
  <Detail__UserDetailGroups>
    <div>
      <Connect(UserGroups) />
      <Connect(PrimaryGroup) />
    </div>
    <Connect(UserPermissions) />
  </Detail__UserDetailGroups>
  <Connect(UserRole) />
</div>
`;
